examples/invalid/60_compare_offer_does_not_offer_equal.lane
// invalid: offering Compare[Int] does not derive an Equal[Int] contextual offer
module Examples.Invalid60

struct Equal[T] {
  equal : (T, T) -> Bool
}

struct Compare[T] {
  equal_impl : Equal[T]
  less : (T, T) -> Bool
}

fn[T] op_equal(a : T, b : T, auto op : Equal[T]) -> Bool {
  op.equal(a, b)
}

offer int_compare_ops : Compare[Int] = Compare::{
  equal_impl: Equal::{
    equal: fn (a : Int, b : Int) -> Bool {
      builtin("%i64_equal")(a, b)
    }
  },
  less: fn (a : Int, b : Int) -> Bool {
    builtin("%i64_less")(a, b)
  }
}

let answer : Bool = 1 == 1
